--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <line x1="14.31" y1="16" x2="2.83" y2="16"></line>
           <line x1="16.62" y1="12" x2="10.88" y2="21.94"></line>
         </svg>
-                <small class="d-block mb-3 text-muted">© 2019</small>
+                <small class="d-block mb-3 text-muted">by Enes KOÇ © 2019</small>
             </div>
             <div class="col-6 col-md">
                 <h5>Features</h5>
